kubernetes/gitops/base/apps/networkpolicies/allow-egress-to-opensearch.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-opensearch
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: magento
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infrastructure
          podSelector:
            matchLabels:
              app.kubernetes.io/name: opensearch
      ports:
        - protocol: TCP
          port: 9200
