kubernetes/gitops/base/apps/networkpolicies/allow-ingress-from-cloudflared.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-cloudflared
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: magento
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infrastructure
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudflared
      ports:
        - protocol: TCP
          port: 8080
